continued adding HTML elements - only footer left

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button type="submit">Sign in</button>
     </form>
     <nav>
-      <div class="nav-left"> 
+      <div class="nav-left">
         <ul>
         <li>All</li>
         <li>Images</li>
@@ -33,7 +33,7 @@
       <div class="nav-right">
       <ul>
         <li>Safesearch on</li>
-      </ul>  
+      </ul>
       </div>
     </nav>
   </div>
@@ -95,7 +95,7 @@
     <section id="main-search-results">
       <div class="search-result-box">
           <h2 class="search-result-heading">Ada Lovelace - Wikipedia</h2>
-          <p class="result-hyperlink">https://en.wikipedia.org/Ada_Lovelace &#9947;</p>
+          <p class="result-hyperlink">https://en.wikipedia.org/wiki/Ada_Lovelace &#9947;</p>
           <p>Augusta Ada King-Noel, Countess of Lovelace was an English mathematician and writer, chiefly known for her work on Charles Babbage's proposed ...</p>
           <p id="wikipedia-hypers">Analytical Engine · Charles Babbage · William King-Noel, 1st Earl of ...</p>
       </div>
@@ -105,9 +105,85 @@
           <p>Synopsis. The daughter of famed poet Lord Byron, Augusta Ada Byron, Countess of Lovelace—better known as "Ada Lovelace"—was born in London on ...</p>
       </div>
       <div class="search-result-box">
+          <h2 class="search-result-heading">Who was Ada? | Ada Lovelace Day</h2>
+          <p class="result-hyperlink">findingada.com/about/who-was-ada/ &#9947;</p>
+          <p>16 Oct 2008 - Read the longer biography of Ada Lovelace by Suw Charman-Anderson, taken from our book, A Passion for Science: Stories of Discovery and ...</p>
+      </div>
+      <div class="search-result-box">
+          <h2 class="search-result-heading">Ada Lovelace | Babbage Engine | Computer History Museum</h2>
+          <p class="result-hyperlink">www.computerhistory.org/babbage/adalovelace/ &#9947;</p>
+          <p>Ada Lovelace (1815-1852) was born Augusta Ada Byron, the only legitimate child of Annabella Milbanke and the poet Lord Byron. Her mother, Lady Byron, had ...</p>
+      </div>
+      <div class="search-result-box">
           <h2 class="search-result-heading">Ada Lovelace: Founder of Scientific Computing</h2>
           <p class="result-hyperlink">https://www.sdsc.edu/ScienceWomen/lovelace.html &#9947;</p>
           <p>ADA BYRON, COUNTESS OF LOVELACE ... Ada Byron was the daughter of a brief marriage between the Romantic poet Lord Byron and Anne Isabelle ...</p>
+      </div>
+      <div class="search-result-box">
+          <h2 class="search-result-heading">10 Things You May Not Know About Ada Lovelace - History in the ...</h2>
+          <p class="result-hyperlink">www.history.com/news/10-things-you-may-not-know-about-ada-lovelace &#9947;</p>
+          <p>10 Dec 2015 - British mathematician Augusta Ada Byron, who after marriage became Countess of Lovelace and was better known simply as Ada Lovelace, ...</p>
+      </div>
+      <div class="search-result-box">
+          <h2 class="search-result-heading">Ada Lovelace: The First Computer Programmer | Mental Floss</h2>
+          <p class="result-hyperlink">mentalfloss.com/article/53131/ada-lovelace-first-computer-programmer &#9947;</p>
+          <p>13 Oct 2015 - Ada Lovelace has been called the world's first computer programmer. What she did was write the world's first machine algorithm for an early ...</p>
+      </div>
+      <div class="search-result-box">
+          <h2 class="search-result-heading">Ada Lovelace - Science Museum</h2>
+          <p class="result-hyperlink">www.sciencemuseum.org.uk/visitmuseum/Plan_your_visit/exhibitions/ada-lovelace &#9947;</p>
+          <p>This exhibition is now closed. Discover the remarkable story of Ada Lovelace, a Victorian pioneer of the computer age, in our free exhibition celebrating the ...</p>
+      </div>
+      <div class="search-result-box">
+          <h2 class="search-result-heading">Ada Lovelace, the First Tech Visionary - The New Yorker</h2>
+          <p class="result-hyperlink">www.newyorker.com/tech/elements/ada-lovelace-the-first-tech-visionary &#9947;</p>
+          <p>15 Oct 2013 - When Ada Lovelace was twelve years old, she wanted to fly. She approached the problem methodically, examining birds and investigating ...</p>
+      </div>
+      <div class="search-result-box">
+          <h2 class="search-result-heading">Ada Lovelace paved the way for Alan Turing's more celebrated ...</h2>
+          <p class="result-hyperlink">www.telegraph.co.uk › Technology &#9947;</p>
+          <p>10 Dec 2014 - The partnership between Ada Lovelace and Charles Babbage was perhaps the true birth of computer science - he invented the hardware, ...</p>
+      </div>
+      <div id="omitted-search-disclaimer">
+        <p><em>Some results may have been removed under data protection law in Europe. Learn More<em><p>
+      </div>
+      <div id="related-searches">
+        <h4>Searches related to ada lovelace</h4>
+        <div id="related-searches-list">
+          <ul id="list-left">
+            <li>what was ada lovelace famous for</li>
+            <li>ada lovelace facts</li>
+            <li>ada lovelace children</li>
+            <li>ada lovelace quotes<li>
+          </ul>
+          <ul id="list-right">
+            <li>ada lovelace day</li>
+            <li>ada lovelace algorithm</li>
+            <li>ada lovelace computer</li>
+            <li>ada lovelace and charles babbage<li>
+          </uL>
+        </div>
+      </div>
+      <div id="google-page-img">
+        <table>
+          <tr>
+            <th>G</th>
+            <th>o</th>
+            <th>o</th>
+            <th>o</th>
+            <th>o</th>
+            <th>o</th>
+            <th>o</th>
+            <th>o</th>
+            <th>o</th>
+            <th>o</th>
+            <th>o</th>
+            <th>g</th>
+            <th>l</th>
+            <th>e</th>
+            <th>></th>
+          </tr>
+        </table>
       </div>
     </section>
   `</div>
