Finished first draft of HTML markup

--- a/index.html
+++ b/index.html
@@ -183,12 +183,38 @@
             <th>e</th>
             <th>></th>
           </tr>
+          <tr>
+            <td></td>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+            <td>8</td>
+            <td>9</td>
+            <td>10</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>Next</td>
+          </tr>
         </table>
       </div>
     </section>
   `</div>
   </section>
 <footer>
+  <div id="footer-left">
+    <p>____ - From your Internet address - Use precise location - Learn more</p>
+    <ul>
+      <li>Help</li>
+      <li>Send Feedback</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+  </div>
 </footer>
 </body>
 </html>
