Changed reset.css to normalize.css | started styling on header

--- a/index.html
+++ b/index.html
@@ -4,38 +4,43 @@
   <meta charset="UTF-8">
   <title>ada lovelace - Google Search </title>
   <link rel="shortcut icon" href="./img/google-favicon-logo.png">
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <header>
   <div class="container">
     <img id="google-nav-logo" src="./img/googlelogo.png" alt="Google Logo">
-    <form>
-      <input type="text" name="main-search" placeholder="ada lovelace">
-      <button type="submit">Sign in</button>
-    </form>
-    <nav>
-      <div class="nav-left">
+    <div class="header-main-content">
+    <div id="form-bar">
+      <form>
+        <input type="text" name="main-search" placeholder="ada lovelace">
+        <button type="submit">Sign in</button>
+      </form>
+      <div id="right-aligned-icon-set">
+        <p>TEST</p>
+        <p>TEST</p>
+        <p>TEST</p>
+    </div>
+    </div>
+      <nav>
+          <ul>
+            <li>All</li>
+            <li>Images</li>
+            <li>News</li>
+            <li>Videos</li>
+            <li>Books</li>
+            <li>More</li>
+          </ul>
         <ul>
-        <li>All</li>
-        <li>Images</li>
-        <li>News</li>
-        <li>Videos</li>
-        <li>Books</li>
-        <li>More</li>
+          <li>Settings</li>
+          <li>Tools</li>
         </ul>
-      </div>
-      <div class="nav-middle">
-      <ul>
-        <li>Settings</li>
-        <li>Tools</li>
+        <ul>
+          <li>Safesearch on</li>
         </ul>
-      </div>
-      <div class="nav-right">
-      <ul>
-        <li>Safesearch on</li>
-      </ul>
-      </div>
-    </nav>
+      </nav>
+    </div>
   </div>
 </header>
   <section id="search-results-container">
