Laborious trial and error with layouts. Settled on final layout behaviour for the returned main search results and accompanying sidebar.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>ada lovelace - Google Search </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./img/google-favicon-logo.png">
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -45,9 +46,6 @@
 </header>
   <section id="search-results-container">
   `<div class="container">
-    <figure id="search-results-num">
-      <p>About 474,000 results (0.42 seconds)</p>
-    </figure>
     <aside id="search-summary-sidebar">
       <div id="summary-img-box">
       </div>
@@ -98,6 +96,9 @@
       </div>
     </aside>
     <section id="main-search-results">
+      <figure id="search-results-num">
+        <p>About 474,000 results (0.42 seconds)</p>
+      </figure>
       <div class="search-result-box">
           <h2 class="search-result-heading">Ada Lovelace - Wikipedia</h2>
           <p class="result-hyperlink">https://en.wikipedia.org/wiki/Ada_Lovelace &#9947;</p>
@@ -207,6 +208,10 @@
           </tr>
         </table>
       </div>
+    </section>
+
+
+
     </section>
   `</div>
   </section>
